Agregue la coneccion a la BD

--- a/config.env
+++ b/config.env
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT=3000
+DATABASE=mongodb+srv://ArielManzano:<PASSWORD>@sensorcluster.zhhp6.mongodb.net/SensorBD?retryWrites=true&w=majority
+DATABASE_PASSWORD=yuEnLE8BjcYTnAAX
