--- a/client/SensorCli/package.json
+++ b/client/SensorCli/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/entity": "^11.1.1",
     "@ngrx/store": "^11.1.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
